--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,15 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header [translucent]="true" color="primary">
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Hi Five
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+  <ion-header collapse="condense" >
+    <ion-toolbar color="primary">
+      <ion-title size="large">Hi Five</ion-title>
     </ion-toolbar>
   </ion-header>
 
